Right click sometimes adds a bookmark instead of opening the context menu (Elementary OS)
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox78 | --- | fixed |
People
(Reporter: stefanehaas, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:74.0) Gecko/20100101 Firefox/74.0
Steps to reproduce:
Righ-click on a link on a web page
Actual results:
Popup to add a bookmark appears
Expected results:
Open context menu popup
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Comment 2•5 years ago
|
||
Moving across to menus, as I think given the location of items, it is more likely a menu issue than directly bookmarks & history's fault.
Though you might want to check if your mouse doesn't have intermittent issues.
| Reporter | ||
Comment 3•5 years ago
|
||
The mouse works fine in all other apps, but in FF it looks like the buttonDown event already performs the action (default item "add Bookmark" select from context menu). When I keep the mouse button pressed the context menu pops up and (still right button pressed) I can select a menu item. I just created a fresh FF profile (in v74.0) ...
Comment 4•5 years ago
|
||
Can you please test with mozregression to see if this happens in a clean profile as well as to find when this got broken? mozregression will help you find the specific changeset which caused the change in behavior, and will ultimately be extremely helpful in fixing the bug. You can download mozregression from https://mozilla.github.io/mozregression/.
Thanks!
Comment 5•5 years ago
|
||
(In reply to Stefan Haas from comment #3)
in FF it looks like the buttonDown event already performs the action
When I keep the mouse button pressed the context menu pops up and (still right button pressed) I can select a menu item
I'm confused - these two statements contradict each other; if pressing the button down would activate the item, then keeping it pressed wouldn't allow you to select an item.
What desktop environment and window manager are you using? Did this behaviour change with a recent Firefox update or update of other software on your machine? If so, can you use mozregression to find out what changed? Does enabling/disabling the titlebar (in hamburger menu > customize...) help?
Moving to widget: gtk because this looks like bug 1552128 and bug 1423810, which were related to our gtk implementation.
| Reporter | ||
Comment 6•5 years ago
|
||
I'm confused - these two statements contradict each other; if pressing the button down would activate the item, then keeping it pressed wouldn't allow you to select an item.
Before this bug i simply clicked on links. As they "regular speed click" nowadays is unpredicative I found out that pressing the right mouse button for some time opens the context menu. I can manoeuvre around while keeping the right mouse button pressed. once I release the right mouse button the underlying item is selected. The "immediate click" seems to fire on a menu item in the middle of the context menu which mostly is the add bookmark item.
I use elemenaryOS 5.1.2 (unbuntu 18.04.03 LTS) with GTK 3.22.30, lightdm 1.26.0. This behaviour started after I had to create a new profile (the old one was accidentally deleted) - usually the oposite should happen (before. problem, after clean new profile: problem gone)
| Reporter | ||
Comment 7•5 years ago
|
||
I downloaded mozgression but due to 100% unusable "install.html" (it's everything except an install guide) but what shall I do with it now? I don't want to hack it, develop on it. What is missing is an installation guide for "users" ...
Comment 8•5 years ago
|
||
(In reply to Stefan Haas from comment #7)
I downloaded mozgression but due to 100% unusable "install.html" (it's everything except an install guide) but what shall I do with it now? I don't want to hack it, develop on it. What is missing is an installation guide for "users" ...
If you have pip installed, you can use pip install mozregression to install it. See https://pypi.org/project/mozregression/
| Reporter | ||
Comment 9•5 years ago
|
||
OK, I installed and started it (still running) ...
| Reporter | ||
Comment 10•5 years ago
|
||
Looks like a race condition: Either the right click opens up immediately - or nothing happens for several seconds, the context is skipped but the action where the mouse appear is clicked.
| Reporter | ||
Comment 11•5 years ago
|
||
Happens also in new default profile of FF 74.0 unbuntu 18.04/eOS 5.1
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Comment 12•5 years ago
|
||
Usually the context menu is triggered by a RightButtonUp event, then you can move the mouse to the menu item an LeftButtonUp again to activate.
Now (in almost all cases) the RightButtonDown (?) event triggers the Context menu and the following (Right ?)ButtonUp selects an entry. A simple click will select the menu item under the mouse (not the first one).
I can "simulate" the original behaviour by pressing the right mouse button, holding it while moving the mouse to a menu item and then release the right mouse button. Sometimes the context menu does not show up at all (>> 10 sec waiting) - I have to try again
| Reporter | ||
Comment 13•5 years ago
|
||
still exists in 76.0
Comment 14•5 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)
| Reporter | ||
Comment 15•5 years ago
|
||
The workaround does not always work, especially when web pages have a non-standard hover/click behavior. This happens frequently on several download pages so I have to switch to chrome every time I want to do any of these downloads. Not being able to use a browser for downloads any more is far more than S3 as it forces me to abandon firefox! I guess this indicates at least S2
| Reporter | ||
Comment 16•5 years ago
|
||
Still happens in FF 76.0.1
| Reporter | ||
Comment 17•5 years ago
|
||
Also P3 (This isn't a bad idea ...) is misleading when this bug forces me to use Chrome or other non-firefox browser: I suggest to switch to P2/S2
| Reporter | ||
Comment 18•5 years ago
|
||
On my company laptop I use FF under Win10 with regular behaviour so using the same browser with different behaviours is really hard to coordinate - I would guess I get some 30+% "wrong clicks on either machine = really confusing instead of "ease-of-use"
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Reporter | ||
Comment 19•5 years ago
|
||
Which info do you need?
| Assignee | ||
Comment 20•5 years ago
|
||
I just installed elementary os on a virtual box and the default popup behavior is a bit strange here. With default install (Hera) and default Firefox (76) and default profile the menu after right mouse click is shown centered under mouse cursor or shifted. System titlebar is on by default.
When I disable system titlebar by default (Customize -> Title bar checkbox), system titlebar is off and the popups are shown correctly.
Stefan, can you confirm that?
Thanks.
| Reporter | ||
Comment 21•5 years ago
|
||
Yes, it works also for my bug (I did not observed misplaced popups). I thought I read this comment when the behaviour started (FF 74) without success but now it works (can't easily minimize a window anymore though). It also looks like the GUI interaction is faster (no delays observed as before).
| Assignee | ||
Comment 22•5 years ago
|
||
Okay, I think we can make the hidden titlebar default on Elementary OS.
| Assignee | ||
Comment 23•5 years ago
|
||
Updated•5 years ago
|
Comment 24•5 years ago
|
||
Updated•5 years ago
|
Comment 25•5 years ago
|
||
| bugherder | ||
Description
•