Bug 1627507 [Linux/Gtk] Enable hidden system titlebar by default on Elementary OS, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D76444